fix horizontal scroll

--- a/custom_css/style.css
+++ b/custom_css/style.css
@@ -59,6 +59,7 @@
 .cover {
   padding: 0 1.5rem;
 }
+
 .cover .btn-lg {
   padding: 0.75rem 1.25rem;
   font-weight: 700;
@@ -86,11 +87,4 @@
 }
 #scroll img:hover {
   opacity: 0.8;
-}
-
-hr{
-  border: 0;
-  height: 1px;
-  background: #333;
-  background-image: linear-gradient(to right, #ccc, #333, #ccc);
 }
